# ChangeLog for sys-fs/squash_dir
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squash_dir-12.8 (08 Jan 2013)

  08 Jan 2013; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-12.7 (01 Jan 2013)

  01 Jan 2013; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support new /etc/conf.d/squash_dir

*squash_dir-12.6 (19 Dec 2012)

  19 Dec 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-12.5 (16 Dec 2012)

  16 Dec 2012; Martin Väth <martin@mvath.de>
  Version bump. ewarn instead of elog, but only if necessary.
  Follow upstream default order.

*squash_dir-12.4 (01 Dec 2012)

  01 Dec 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Provide USE for ORDER default
  Print logs instead of making hard dependencies

*squash_dir-12.3 (23 Nov 2012)

  23 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Provide USE for ORDER default

*squash_dir-12.2 (17 Nov 2012)

  17 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Improve zsh completion support

*squash_dir-12.1 (14 Oct 2012)

  14 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Changes default of ORDER, see ChangeLog

*squash_dir-12.0 (15 Sep 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  15 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.16 (15 Sep 2012)

  15 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fix regression in wrapper script

*squash_dir-11.15 (14 Sep 2012)

  14 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fix regression in wrapper script

*squash_dir-11.14 (12 Sep 2012)

  12 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Succeed if read-only fallback. New: STOP

*squash_dir-11.13 (06 Sep 2012)

  06 Sep 2012; Martin Väth <martin@mvath.de>